<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_8"
        android:animateLayoutChanges="true"
        android:background="@android:color/white"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/dialog_add_offer_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="@dimen/dp_5"
            android:animateLayoutChanges="true"
            android:padding="@dimen/dp_6">

            <TextView
                android:id="@+id/add_image_text"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/add_image"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"

                android:textColor="@android:color/black" />

            <ImageView
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:tint="@color/colorAccent"
                app:srcCompat="@drawable/ic_add_white_24dp" />

            <ImageView
                android:id="@+id/done"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"

                android:tint="@color/colorAccent"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_check_black_24dp" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:visibility="gone" />
        </RelativeLayout>

        <EditText
            android:id="@+id/edtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="@dimen/dp_6"
            android:hint="@string/title"
            android:inputType="textMultiLine|textCapSentences" />
        <EditText
            android:id="@+id/edtContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
android:visibility="gone"
            android:layout_margin="@dimen/dp_6"
            android:hint="@string/content"
            android:inputType="textMultiLine|textCapSentences" />


        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="@dimen/dp_6"
            android:backgroundTint="@color/colorAccent"
            android:text="submit"
            android:textColor="@android:color/white" />
        <!--  <ImageView
              android:id="@+id/iv_news_image"
              android:layout_width="wrap_content"
              android:layout_height="250dp"
              android:layout_gravity="center_horizontal"
              android:adjustViewBounds="true" />-->
    </LinearLayout>
</androidx.core.widget.NestedScrollView>