<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"

    xmlns:card_view="http://schemas.android.com/tools"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="handlers"
            type="com.aadu_maadu_kozhi.gregantech.view.activity.ThagavalKalanchiyamDetailActivity" />
    </data>

 <androidx.coordinatorlayout.widget.CoordinatorLayout


    android:id="@+id/parent"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout

        android:layout_width="match_parent"
        android:id="@+id/app_bar_layout"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <com.github.chrisbanes.photoview.PhotoView

                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
android:adjustViewBounds="true"
                app:layout_collapseMode="parallax"
                android:transitionName="@string/activity_image_trans"

                android:layout_height="250dp" />

        <!--    <ImageView
                android:id="@+id/iv_news_image"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:transitionName="@string/activity_image_trans"

                app:layout_collapseMode="parallax" />-->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                ads:title="@string/app_name"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffe5e5e5"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:visibility="gone"
                ads:adSize="BANNER"
                ads:adUnitId="@string/ADMOB_BANNER_THAGAVAL_KALANCHIYAM_DETAILS_SCREEN"/>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_6"
                android:layout_marginRight="@dimen/dp_6"
                android:layout_marginTop="@dimen/dp_4"
                android:elevation="@dimen/dp_4"
                card_view:cardCornerRadius="4dp">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autoLink="all"
                    android:textStyle="bold"
                    android:padding="@dimen/dp_6"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sp_16"
                    android:transitionName="@string/activity_text_trans" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/dp_4"
                android:layout_marginLeft="@dimen/dp_6"
                android:layout_marginRight="@dimen/dp_6"
                android:elevation="@dimen/dp_4"
                card_view:cardCornerRadius="4dp">

                <TextView
                    android:id="@+id/tvContent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autoLink="all"
                    android:padding="@dimen/dp_6"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sp_15"
                    android:transitionName="@string/activity_text_trans" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

 </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>